--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2 {
 	font-size: 1.1em;
 	font-style: italic;
 	padding-bottom: 15px;
-	color: #778ca3;
+	color: #feca57;
 }
 .content {
 		padding: 2% 30%;
