--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2 {
 	font-size: 1em;
 	font-style: italic;
 	padding-bottom: 15px;
-	color: #feca57;
+	color: #273c75;
 }
 .content {
 		padding: 4% 30%;
